# Trinity-v2.15.0 Nov 30, 2022
- use DB_File for storing read names wanted during normalization step eliminating excessive RAM usage.
- support for hpc_gridrunner/singularity


# Trinity-v2.14.0 Mar 11, 2022
- bugfix for the rarely occurring butterfly error:  "after topo sort, still have edge unaccounted for: Edge..."
- setting max value for max_mem to 200G to avoid potential problems
- adding validate_fastqs.py
- setting an imposed absolute min contig length parameter setting to 100
- exit zero on version check
- updates from M. Crusoe to make system
- updated bowtie2 and samtools sort command
- added trinity ids for the goseq depleted files


# Trinity-v2.13.2 Sep 4, 2021
-bugfix - Trinity-GG final output files werent being written in v2.13, so restored here under v2.13.2, and integrated into the test regression suite to check in future releases.
-max reads per graph setting utilized when writing partitioned fa files from phase1 into phase2, prioritizing highest pct read mapping to graph and read pairings - handles the problem of a small number of graphs becoming sinks for reads with minimal spectral kmer alignments

# Trinity-v2.13.1 Aug 23, 2021
-bugfix in Trinity gene splice modeler causing rare crashes


# Trinity-v2.13.0 Aug 11, 2021
-moved salmon filtering to the end of genome-free assembly, while retaining per-cluster execution with genome-guided.
-parafly progress monitoring resumes instead of resets under retry mode.
-added --no_symlinks option for those that can't use symlinks
-min contig length better enforced
-improved Butterfly stability
-supertranscripts no longer generated as a default output - just run the supertranscripts process once you have the final Trinity.fasta file if they're of interest.


# Trinity-v2.12.0 Mar 4, 2021
-major:
	-Butterfly code updates to improve speed for other long-running challenging assemblies.
-minor:
	-in silico normalization - random seed set for reproducibile read selection.