@@ -1,6 +1,7 @@
 # Trinity-v2.15.0 Nov 30, 2022
 - use DB_File for storing read names wanted during normalization step eliminating excessive RAM usage.
 - support for hpc_gridrunner/singularity
+- Docker updated to ubuntu:20.04
 
 
 # Trinity-v2.14.0 Mar 11, 2022
